# financial-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml
notebooks/: 00_setup_check.ipynb  01_data_exploration.ipynb  02_rag_prototype.ipynb  03_agent_prototype.ipynb  04_validation_test.ipynb  05_mcp_test.ipynb  06_evaluation.ipynb  07_metadata_test.ipynb  08_production_test.ipynb  09_summarization.ipynb  ragas_evaluation_results.csv
src/agents/: __init__.py  graph.py  planner.py  retriever_agent.py  summarizer.py  synthesizer.py  validator.py  web_researcher.py
src/api/: main.py
src/evaluation/: benchmark_dataset.json  run_custom_metrics.py
src/ingestion/: batch_processor.py  chunker.py  downloader.py  file_parser.py  indexer.py
src/mcp/: openbb_client.py
src/utils/: email_sender.py
src/validation/: numeric_matcher.py  schemas.py
