[project]
name = "financial-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.139.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.12",
    "langchain-anthropic>=1.4.8",
    "langchain-community<0.4",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.4",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "llama-parse>=0.6.94",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "redis>=8.0.1",
    "sec-edgar-downloader>=5.1.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "tavily-python>=0.7.26",
    "torchvision>=0.28.0",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]
